--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,21 @@
 
 /**************************************************Dark/light mode button*****************************************************************/
 
-/* The switch - the box around the slider */
+.dl_button
+{
+  position: absolute;
+  top:30%;
+  right:14%;
+}
+
+.dl_text
+{
+  position: absolute;
+  top:29%;
+  right: 19%;
+}
+
+
 .switch 
 {
   position: relative;
@@ -89,7 +103,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #000000;
+  background-color: #00008B/*#000000*/;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -208,15 +222,8 @@ input:checked + .darkSlider:before
   border-radius: 50%;
 }
 
-/***************************************************************************************************************************************************/
 
-
-
-
-
-
---------/*Intro page*/----------
-
+------------------------------------------------------------/*Intro page*/--------------------------------------------------------
 
 *{
 
@@ -232,36 +239,25 @@ input:checked + .darkSlider:before
   display: flex;
 }
 
-#stripes_block
-{
-  width:40%;
-  display:inline-block;
-}
 
 
 #stripes 
 {
-  float: left;
-  text-align: left;
-  width:50%;
+  position: absolute;
+  width:16%;
   height: auto;
 }
 
 
 
-#ecam_logo
-{
-  display:inline-block;
-  float:right;
-  text-align: right;
-  width: auto;
-}
-
 #logo_student 
 {
-  top: 2%;
-  margin-right: 2%;
-  width: 50%;
+  position: absolute;
+  float:right;
+  top:4%;
+  right:2%;
+  width: auto;
+  width: 28%;
   height: auto;
 }
 
@@ -269,9 +265,10 @@ input:checked + .darkSlider:before
 #logo 
 {
   float: left;
-  padding-left: 40%;
+  padding-top: 40%;
+  padding-left: 30%;
   margin-top: 2%;
-  width:70%;
+  width:74%;
   height: auto;
 }
     
@@ -279,12 +276,12 @@ input:checked + .darkSlider:before
 
 #intro
 {
-  font-size: 180%;
+  font-size: 170%;
   flex:1;
   color: blue;
-  padding-top: 0%;
+  padding-top: 17%;
   padding-right: 8%;
-  padding-left: 4%;
+  padding-left: 2%;
 }
 
 
@@ -292,15 +289,14 @@ input:checked + .darkSlider:before
 
   #discover 
   {
-    display: inline-block;
     background-color: blue;
-    border-radius: 5px;
-    border: 4px double #cccccc;
+    border-radius: 10%;
+    border: 6px double #cccccc;
     color: #eeeeee;
     text-align: center;
-    font-size: 28px;
-    padding: 10px;
-    width: 150px;
+    font-size: 150%;
+    padding: 6%;
+    width: 20%;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -o-transition: all 0.5s;
@@ -313,10 +309,11 @@ input:checked + .darkSlider:before
 
   #Discover 
   {
+    position: absolute;
+    left:72%;
+    top:67%;
     margin-top: 8%;
-    margin-left: 60%;
     text-align: center;  
   }
-
---------/*Main page*/----------
+/**************************************Dark mode****************************/
 
